<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dorapps.com.salestaxcalculator.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:id="@+id/rlMainScreen"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llPrice">

            <TextView
                android:id="@+id/tvPrmptPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prmptPrice"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:hint="@string/hntPrice"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llRate"
            android:layout_below="@+id/llPrice">

            <TextView
                android:id="@+id/tvPrmptRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prmptRate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <EditText
                android:id="@+id/etRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:hint="@string/hntRate"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/btnCalculate"
            />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clckCalc"
            android:layout_below="@+id/llRate"
            android:layout_alignParentStart="true"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
